chapter01/dashboard-metallb.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-metallb
  namespace: kube-system
spec:
  selector:
    k8s-app: kubernetes-dashboard
  type: LoadBalancer
  loadBalancerIP: 172.18.72.101 #可取消该选项，启用metallb自动分配
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8443
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
